--- a/CSE 320.md
+++ b/CSE 320.md
@@ -264,12 +264,23 @@
             * Control flow returns to next instruction
         2. Faults
             * Unintentional but possibly recoverable
+                * Processor transfer control to fault handler
+                    * If correctable, returns control to the faulting instruction, thereby re-executing it
+                    * Else, returns to an abort routine in the kernel that terminates the application that caused fault
             * Control flow returns to current instruction or aborts
         3. Aborts
             * Unintentional and unrecoverable
+            * Never return control to the application program
+            * Control flow returns to abort routine and aborts
+        * ![[Pasted image 20230309132908.png]]
+        * ![[Pasted image 20230309140323.png]]
 * Context switches
 
 # Processes
+``pid_t getpid(void)``
+- Returns PID of curr proccess
+``pid_t getppid(void)``
+- Returns PID of parent process
 * From a programmer's perspective, a process can be:
     1. Running: Executing or will be scheduled
     2. Stopped: Suspended and will not be scheduled until further notice
@@ -280,17 +291,28 @@
             3. Called `exit()`
 * Creating process: `fork()`
     * `fork()` called once but returns twice
+        * Different values so you can tell which process is running - child or parent
+        * Parent process: return value of ``fork()`` is **PID** of child process
+        * Child process: return value of ``fork()`` is **0**
+            * Duplicate but separate address spaces
+            * Gets identitical copies of any of the parent's open file descriptors which means the child can read/write any files that were open in the parent when it called ``fork``
+        * Seperate proccesses that run concurrently so the instructions are ran arbitrarily -- cannot make assumptions of the run order
     * `exit()` and `execve()` called once but possibly never returns
-    * Control flow can be modelled with process graphs via toposort:  
+    * Control flow can be modelled with process graphs via toposort:
+        ![[Pasted image 20230321140225.png]]
+        ![[Pasted image 20230321140206.png]]
         ![[process_graph1.png]]
         ![[process_graph2.png]]
 * Reaping child processes: `wait()`
     * Terminated processes become zombies, because its parent may use its exit status or OS tables
-    * `wait()` and `waitpid()` reap zombie child processes
+    * ![[Pasted image 20230323134442.png]]
+    * `wait()` and `waitpid()` reap zombie child processes (even if not running, still consume system memory resources)
+        * if the child exits before parent calls `wait()`, the call returns immediately as `wait` obtains info about child state and child termination is a changed state
+        * Use `wait()` for single child process whereas `waitpid()` is meant for more complex programs with multiple children and parents or for zombie processes
     * If parent don't reap:
         1. If parent doesn't terminate: Never diminishes (a kind of memory leak)
-        2. If parent does terminate: Reaped by `init` process (pid == 1)
-        * So only need to explicitly reap long-running processes
+        2. If parent does terminate: Reaped by `init` process (pid == 1) -- creating during start-up & never terminates & ancestor of every process
+        * So only need to explicitly reap long-running processes such as **shells** or **servers**
 * Loading and running processes: `execve()`
     * `int execve(char *filename, char *argv[], char *envp[])`
     * Loads and runs in the current process
@@ -300,6 +322,7 @@
 * Process groups
     * Can be get and set by `getpgrp()` and `setpgid()`
     * Kill all process in a group with `kill -n -<pid>` 
+
 
 # Signals
 * Unix shell: An application that runs program on behalf of the user
@@ -545,6 +568,38 @@
         * _Sweep_: Start at beginning of VM, and free unmarked blocks
         * How to find beginning of block? -- Use a balanced tree
 
+# Memory-Related Perils/Pitfalls
+- Dereferencing Bad Pointers
+	- classic ``scanf`` bug![[Pasted image 20230307140113.png]]
+- Reading Uninitialized Memory
+	- Assuming that heap data is initialized to zero![[Pasted image 20230307140200.png]]
+- Overwriting Memory
+	- Allocating the (possibly) wrong sized object ![[Pasted image 20230307141002.png]]
+		- `int` is incorrect, should be `N*sizeof(p[0])` because it is more dynamic
+			- Could also be just `sizeof(int*)`
+		- Memory leak
+		- Need to check if malloc is successful
+	- Off-by-one error ![[Pasted image 20230307141157.png]]
+		- Loops `0` to `N` instead of `0` to `N-1`
+	- ![[Pasted image 20230307141330.png]]
+		- Not checking max string size
+		- Basis for classic buffer overflow attacks
+		- Never use `gets()`
+		- The rest of the read-in info goes into memory and goes god knows where
+		- Malicious programmers could inject malicious contents into program memory
+			- Hence buffer overflow
+	- Misunderstanding pointer arithmetic![[Pasted image 20230307142328.png]]
+	- Referencing a pointer instead of the object it poibts to ![[Pasted image 20230307142338.png]]
+		- Supposed to delete minimum element from a binary heap data structure (minimum element is typically at root of the heap -- first element in the array)
+		- `packet` points to the minimum element
+			- Replaces the minimum element with the last element in the heap then decrements size ptr to reflect the removal. Lastly, it restores binary heap by calling `Heapify`
+		- `*size--*` is misleading as you are decrementing ptr rather than the value 
+			- need `--*size*`
+	- Referencing Nonexistent Variables ![[Pasted image 20230307143238.png]]
+		- Forgetting that local variables disappear when a function returns
+		- Local variables in a function stored on stack and deallocated when function returns
+	- Freeing Blocks Multiple Times ![[Pasted image 20230307143444.png]]
+	- 
 # Network Programming
 * Client-Server Architecture
 * Network Architecture
