--- a/GEO 103.md
+++ b/GEO 103.md
@@ -211,7 +211,6 @@
 
 
 # Ch. 5
-
 ## Rocks, Fossils, and Time
 
 * Earth changed over time
@@ -229,21 +228,27 @@
 * sedimentary rocks are nearly all stratified
 * many igneous rocks (succession of lava flows/ash beds) are also stratified/obey princip. of stratigraphy
 * many metamorphic rocks are stratified too
-
+![[Pasted image 20230307181313.png]]
+![[Pasted image 20230307181326.png]]
+![[Pasted image 20230307181347.png]]
 ## Vertical Stratigraphic Relationships
 * bedding planes separate one strata from another
 * strata grade vertically from 1 rock to another
 * rocks above/below diff in comp. texture, color or combin. of features
 * bedding plane => change in sedimentation/period of nondeposition
-
+![[Pasted image 20230307181403.png]]
 ## Superposition
 * Nicolas Steno: determine relative ages of horizontal strata by position in sequence
 * if deformed strata, harder to determine
     * some sedimentary structs. (cross bedding) & fossils can help solve this
+![[Pasted image 20230307181442.png]]
+![[Pasted image 20230307181459.png]]
 
 ## Principle of Inclusions
 * determine relative ages
 * inclusions/fragments older than rock itself
+![[Pasted image 20230307181602.png]]
+* Basalt is older because granite includes it
 
 ## Age of Lava Flows, Sills
 * determine relative ages of lava flows
@@ -253,46 +258,75 @@
         * lava flow forms in sequence with sedimentary layers
         * rocks below - signs of heating but not rocks above
         * rocks above may have clasts from underlying lava flow
-        
+* Lava flows![[Pasted image 20230307181658.png]]
+	* rocks below lava (#3) will have signs o fheating but not rocks above
+	* rocks above (#5) may have clasts from underlying lava flow
+* Sill ![[Pasted image 20230307181803.png]]
+	* sill will heat rocks above and below
+	* inclusions of rocks above (#4) and below (#2)
+	* neither of these rocks will have inclusions of the sill
+
 ## Unconformities
-* Conformable strata
+* **Conformable** strata
     * seq. of rocks in deposition was mostly continuous
-* Unconformities
+* **Unconformities**
     * non-deposition and/or erosion
         * long periods of geologic time
         * millions/tens of mil, or hundred mils of years (Siccar Point)
     * rock record is incomplete
-        * termed hiatus
+        * termed **hiatus**
 
 ## Origin of an Unconformity
 * deposition began 12 mil years ago until 4 mil yrs ago
     * for 1 mil yrs, erosion occurred removing 2 Myr of rocks
     * rise to 3 mil year hiatus
-* last column is actual stratigraphic record with conformity
+* last column is actual stratigraphic record with unconformity
+**![[Pasted image 20230307181921.png]]
+**
 
 ## Types of Unconformities
-1. disconformity - separation of younger from older rocks (both parallel)
-2. nonconformity - erosional surface cut into metamorphic/intrusive rocks and covered by sedim. rocks
-3. angular conformity - erosional surface on titled/folded strata over younger rocks
+1. **disconformity** - separation of younger from older rocks (both parallel)
+2. **nonconformity** - erosional surface cut into metamorphic/intrusive rocks and covered by sedim. rocks
+3. **angular conformity** - erosional surface on titled/folded strata over younger rocks
 ![[1676040120.png]]
 
 - unconformities on regional extent may vary from one type to another
 -  does not represent same amount of geologic time
 
+> Discomformity
+> ![[Pasted image 20230307182048.png]]
+> disconformity between sedimentary rocks in California, with conglomerate deposited upon erosion surface in underlying rocks
+
+> Angular Uncomformity
+> ![[Pasted image 20230307182105.png]]
+> Upper Triassic red sandstones unconformably overlying Upper Carboniferous turbidites (Portugal)
+
+> Noncomformity
+> **![[Pasted image 20230307182119.png]]
+> Colorado between Proterozoic Pikes Peak granite and overlying Cambrian Sawatch Quartzite
+
 ## Lateral Relationships
-* Steno proposed Principle of Lateral Continuity
+* Steno proposed **Principle of Lateral Continuity**
     * layers of sedim. extend outward until terminate
     * termination => maybe abrupt @ edge of depositional basin
         * eroded/truncated by faults
+![[Pasted image 20230307182410.png]]
+![[Pasted image 20230307182417.png]]
+Can also be **gradual terminations**:
+![[Pasted image 20230307182456.png]]
+![[Pasted image 20230307182516.png]]
+* rock unit becomes progressively thinner until it **pinches out**
+* splits into thinner units each of which pinches out -**intertonguing**
+* rock unit changes by **lateral gradation** as composition and/or texture => increasingly differs
 
 ## Sedimentary Facies
 * intertonguing/lateral gradation indicate simultaneous deposition in environments
-* sedimentary facies - body of sediment with distinctive physical/chemical/biological attributes deposited side by side with other sediments
-* continental shelf -> sand may accumulate in high energy nearshore environment
-* mud/carbonate deposition takes place @ same time as offshore low energy environment
+* **sedimentary facies** - body of sediment with distinctive physical/chemical/biological attributes deposited side by side with other sediments
+* continental shelf -> sand may accumulate in **high energy** nearshore environment![[Pasted image 20230307185233.png]]
+* mud/carbonate deposition takes place @ same time as offshore **low energy** environment
 
 ## Marine Transgressions
-* sea level rises to land
+* **sea level rises to land**
 * shoreline migrates landward
 * environments parallel to shoreline
 * laterally adjacent depositional environment => sedimentary facies
@@ -300,12 +334,14 @@
 * rocks of each facies => younger 
     * time transgressive - ages vary from place to place
 * younger shale on top, older shale on bottom
-
+![[Pasted image 20230307185358.png]]
+![[Pasted image 20230307185420.png]]
 Ex. Marine Transgression in Grand Canyon
 * 3 formations:
     * Muav Limestone (top)
     * Bright Angel Shale (middle)
     * Tapeats Sandstone (bottom)
+![[Pasted image 20230307185433.png]]
 
 ### Marine Regression
 * sea level falls w/ respect to continent
@@ -313,14 +349,13 @@ Ex. Marine Transgression in Grand Canyon
     * upward slope
     * younger shale on bottom and older shale is offshore
     * environments parallel to shoreline migrate seaward
-
+![[Pasted image 20230307185900.png]]
 ### Walther's Law
 * Walther recognized facies found laterally => yields a vertical sequence
 * Law: facies found in a conformable vertical sequence also existed beside one another laterally
     * applies to marine transgression/regressions
-
-
-## Extent, Rates & Cause of Transgressions& Regressions
+![[Pasted image 20230307185917.png]]
+## Extent, Rates & Cause of Transgressions & Regressions
 * 6 major transgressions in NA
 * gives major sequences (bounded by unconformities)
 * subsidence => transgression
@@ -328,13 +363,13 @@ Ex. Marine Transgression in Grand Canyon
 * seafloor spreading => expands mid ocean ridge & displaces seawater onto continents
 * widespread glaciation causes regression
 * diminishing seafloor spreading => increases volume of ocean basins => regression
-
+![[Pasted image 20230307185949.png]]
 ## Relative Ages between Separate Areas
 * relative dating can determine relative ages of rocks in columns A and B
 * need more info to determine actual ages of rocks in one section relative to other
 * rocks in A may be younger/older/or same age as B
 * fossils solves this!
-
+![[Pasted image 20230307190011.png]]
 ### Fossils
 * most common in sedimentary and pyroclastic materials (esp. ash)
 * useful for determining relative ages of strata
@@ -348,6 +383,13 @@ Ex. Marine Transgression in Grand Canyon
     * shells
 * rarely find entire animals preserved by freezing/mummification
 
+> [!faq]- ![[Pasted image 20230307190319.png]]
+> Marine reptile (2.3 m)
+
+> [!faq]- ![[Pasted image 20230307190424.png]]
+> Mesozoic invertebrates - nautiloids & ammonoids
+
+
 ### Trace Fossils
 * indications of organic activity:
     * tracks
@@ -356,6 +398,12 @@ Ex. Marine Transgression in Grand Canyon
     * nests called trace fossils
         * spiral burrow made by land dwelling beaver - Paleocastor
         * **coprolite** - type of trace fossil consisting of fossilized feces - gives size/diet of animal
+
+>[!faq]- ![[Pasted image 20230307190543.png]]
+>trace fossil - coprolite
+
+>[!faq]- ![[Pasted image 20230307190627.png]]
+>trace fossil - burrow => made by land-dwelling beaver - Paleocastor
 
 
 ### Body Fossil Formation
@@ -374,6 +422,15 @@ Ex. Marine Transgression in Grand Canyon
 * 40,000 year old frozen baby mammoth
 * found in Siberia in 1971
 * hairy coat - hair around feet still visible
+>[!faq]- ![[Pasted image 20230307190814.png]]
+>Insects in amber
+
+>[!faq]- ![[Pasted image 20230307190838.png]]
+>Preservation in tar
+
+>[!faq]- ![[Pasted image 20230307190906.png]]
+>40,000 year-old frozen baby mammoth found in Siberia (unaltered remains)
+
 
 #### Altered Remains
 * petrified tree stump in Florissant, Colorado
@@ -381,6 +438,19 @@ Ex. Marine Transgression in Grand Canyon
 * volcanic mudflows covered lower parts of trees
 * carbon film of palm frond
 * carbon film of insect
+>[!faq]- ![[Pasted image 20230307190945.png]]
+>Altered remains - petrified stump in Florissant Fossil beds National Monument, Colorado.
+>Volcanic mudflows 3-6 m deep covered lower parts of many trees at this site
+>Silica ($SiO_2$) has replaced organic materials
+
+>[!faq]- ![[Pasted image 20230307191128.png]]
+>Carbon film of palm frond (altered remains)
+
+>[!faq]- ![[Pasted image 20230307191148.png]]
+>Carbon film of insect (altered remains)
+
+
+
 
 ## Molds & Casts
 * molds form when buried remains leave cavity
@@ -421,6 +491,9 @@ Ex. Marine Transgression in Grand Canyon
 * fossil assemblages are unique
 
 ![[1676473721.png]]
+>[!faq]- What do the dash lines represent?
+>Used to indicate rocks with similar fossils thus having similar same sage
+
 
 
 ## Relative Geologic Time Scale
@@ -447,18 +520,18 @@ Ex. Marine Transgression in Grand Canyon
     * Lapworth solved the problem
     * assigned overlap btwn both Cambrian & Silurian to a new system
         * Ordovician (correct)
-
+![[Pasted image 20230307191508.png]]
 
 ## Stratigraphic Terminology
 * sedimentary rocks are time transgressive
     * belong to one system in one area & another system elsewhere
     * some localities rock unit straddles boundaries btwn systems
     * rocks - defined by content
-        * lithostratigraphic unit - rock content
-        * biostratigraphic unit - fossil content
+        * **lithostratigraphic unit** - rock content
+        * **biostratigraphic unit** - fossil content
     * time - expressing or relating to geologic time
-        * time-stratigraphic unit - rocks of a certain age
-        * time units - referring to time and not rocks
+        * **time-stratigraphic unit** - rocks of a certain age
+        * **time units** - referring to time and not rocks
 
 ### Lithostratigraphic Units
 * based on rock type
@@ -557,8 +630,7 @@ Ex. Marine Transgression in Grand Canyon
 * lava flows/ash falls => most useful for determining absolute ages
     * gives maximum age for rocks above and minimum age for rocks below
 * combines thousands of absolute ages associated with sedimentary rocks of known relative ages gives numbers on geologic time scale
-
-
+![[Pasted image 20230307194647.png]]
 
 
 # Ch. 6
@@ -1169,8 +1241,17 @@ Horses:
 ### Precambrian
 * informal but widely used term referring to time & rocks
 * includes time from Earth's origin 4.56 Gyr to beginning of Phanerozoic Eon 542 Myr
-* no rocks known for first 560ish Myrs of geologic time - Hadean
+* no rocks known for first 560ish Myrs of geologic time - **Hadean**
+
+>[!faq]- What time period is known for not having rocks for first ~560 Myrs of geologic time?
+>Hadean
+
 * oldest known rocks on Earth are 4.03 Gyr Acasta Gneiss (northwest Canada)
+
+> [!faq]- What are the oldest known rocks on Earth?
+> Acasta Gneiss (northwest Canada) at 4.03 Gyr
+
+
 * Precambrian record of geologic time difficult to interpret because for Precambrian rocks:
 	* altered by metamorphism
 	* complexly deformed
@@ -1181,7 +1262,7 @@ Horses:
 ### Eons of Precambrian
 * subdivisions difficult to establish
 * 3 formal eons for Precambrian
-	* Hadean, Archean, and Proterozoic
+	* **Hadean, Archean, and Proterozoic**
 * **Hadean** Eon - name for time preceding rock record
 * **Archean** Eon - covers:
 	* begins w/ age of Earht's oldest known rocks ~4 Gyr 
@@ -1189,6 +1270,9 @@ Horses:
 * Precambrian eons have no stratotypes
 	* Cambrian Period based on Cambrian System of rocks
 	* Precambrian eons - terms denoting time although controversial
+>[!faq]- When does Archean Eon begin and end?
+>Begin: age of Earth's oldest known rocks ~4 Gyr
+>End: 2.5 Gyr - beginning of Proterozoic Eon
 
 ![[Pasted image 20230301122126.png]]
 
@@ -1196,6 +1280,11 @@ Horses:
 * exposed Precambrian rocks constitute Shields
 * platforms consist of buried Precambrian rocks
 * Shields and adjoining platforms make up cratons
+![[Pasted image 20230307200041.png]]
+>[!faq]- What does the red and green symbolize?
+>Red: Exposed Precambrian rocks
+>Green: Covered Precambrian rocks
+
 
 ## Continental Foundations
 * continents consist of rocks with andesitic average compositions
@@ -1541,6 +1630,7 @@ Horses:
 * oldest known cyanobacteria was photosynthesizing but photosynthesis is complex metabolic process
 * simpler type of metabolish should have preceded it
 * no fossils are known of these earliest organisms (maybe)
+![[Pasted image 20230308091806.png|300]]
 
 ### Is this a stromatolite?
 ![[Pasted image 20230306094023.png]]
@@ -1548,10 +1638,13 @@ Horses:
 
 ### Earliest Organisms
 * resembled **anaerobic** bacteria
+	* required no oxygen (likely posionous to them)
 * **heterotrophic**
+	* cannot come up with their own food
 	* depended on an external source of nutrients
 	* *autotrophic* organisms make their own nutrients in photosynthesis
 * had **prokaryotic** cells
+	* come up with food through some process internally
 	* lacked cell nucleus
 	* lacked other internal cell structures typical of **eukaryotic cells** 
 * anaerobic, heterotrophic prokayrotes could use **adenosine triphosphate (ATP)** as nutrient source
@@ -1577,6 +1670,415 @@ Horses:
 
 #### Archean Mineral Resources
 ![[Pasted image 20230306094746.png]]
-- Archean rocks notably rich in mineral deposits
-	- massive sulfide deposits important hosts of copper, zinc, nickel, lead, gold, silver
-	- other important deposits include gold, chromium, platinum, and iron
+- Archean rocks notably rich in **mineral deposits**
+	- massive sulfide deposits important hosts of *copper, zinc, nickel, lead, gold, silver*
+	- other important deposits include *gold, chromium, platinum, and iron*
+
+**Archean** -
+	Neo-archean
+	Meso-archean
+	Paleo-archean
+	Eo-archean
+**Hadean**
+
+
+# Ch. 9
+## Precambrian Earth & Life History -- Proterozoic Eon
+- spans from **2500 - 539** Myr
+- **~2 bil.** years in duration, accounting for **42.5%** of geologic time
+- subdivided into 3 Eras:
+	- **Paleoproterozoic**
+	- **Mesoproterozoic**
+	- **Neoproterozoic**
+- recent effort at defining periods - mainly for **Neoproterozoic**
+![[Pasted image 20230308094612.png|300]]
+
+## Archean-Proterozoic Boundary
+* arbitrarily placed at 2500 Gyr
+	* marks approximate time of changes in style of crustal evolution
+	* changes are gradational and better termed **Archean-Proterozoic (A/P) transition**
+	* largely complete in South Africa ~3.0 Gyr
+	* NA change took place from ~2.95 to 2.45 Gyr
+* among major changes at or after transition
+	* less role of greenstones-granite-gneiss terranes
+	* less pervasive metamorphism
+	* development of widespread continental shelves
+	* unambiguous evidence for plate tectonics
+	* changes in sedimentary styles (redbeds)
+	* development of $O_2$-dependent organisms
+
+## Evolution of Proterozoic Continents
+- Archean cratons assembled by collisions & amalgamation of island arcs & microcontinents
+	- provided nuclei around Proterozoic crust accreted
+	- formed much larger landmassses
+- Proterozoic accretion at craton margins have taken place more rapidly than today due to greater radiogenic heat
+- greenstone belts formed during Late Archean but rare after **A/P** transition
+	- minor occurrences continued at increasingly reduced rate through to Phanerozoic
+## Laurentia
+* good example of process
+* large landmass consisting of what is now:
+	* NA
+	* Greenland
+	* parts of northwestern Scotland
+	* perhaps some of Baltic shield (Scandinavia)
+* originiated & major growth **~2.0 - 1.8 Gyr**
+	* collisions among various plates formed several linear/arcuate orogens
+	* many rocks => metamorphosed & intruded by plutons/batholiths
+
+### Laurentia - Paleoproterozoic
+- Archean cratons "**suturered**" along deformation belts (orogens) by **~1.8** Gyr
+- grew along southern margin by accretion
+![[Pasted image 20230308094635.png]]
+
+- major orogenies suturing Archean cratons:
+	- **Thelon**
+	- **Trans Hudson**
+	- **Penokean**
+	- **Wopmay**
+- Wopmay orogen marks site of ocean basin opening (to west) & closing
+	- complete Wilson cycle
+	- passive margin sedimentary sequence preserved
+![[Pasted image 20230308094817.png|350]]
+
+## Wopmay Orogen - Wilson Cycle
+- complete cycle of opening/closing of ocean basin
+![[Pasted image 20230308094857.png|350]]
+
+## Early Proterozoic Rocks in Great Lakes Region
+- Early Proterozoic sandstone-carbonate-shale assemblages widespread near Great lakes
+	- continental glacial deposits
+	- Huronian & correlated rocks reflect development of passive margin
+![[Pasted image 20230308095001.png]]
+
+## Southern Margin Accretion
+- Laurentia grew along southern margin by **accretion**
+	- **Yavapai orogen** (1.8 Gyr)
+	- **Mazatzal-Pecos orogen** (1.7 Gyr)
+	- **Grenville orogen** (1.0 Gyr)
+- Midcontinental Rift formed ~1.0 Gyr
+- **75%** of NA in place at end of Grenville
+![[Pasted image 20230308095242.png]]
+
+## Midcontinent Rift
+- formed ~1.0 Gyr
+	- 2000 km long & up to >10 km thick sequence of volcanics/sediments
+	- may represent failed rifting of Laurentia
+	- may be related to collision (similar to Lake Baikal)
+	- ![[Pasted image 20230308095355.png|300]]
+	- ![[Pasted image 20230308095701.png|350]]
+	- ![[Pasted image 20230308095727.png|350]]
+
+## Sedimentary Basins in West
+- middle - late Proterozoic basins formed on western margin of craton
+	- **Belt** Basin
+	- **Uinta** Basin
+	- **Apache** Basin
+- Proterozoic rocks also preserved in Grand Canyon sequence
+![[Pasted image 20230308095853.png|350]]
+![[Pasted image 20230308095919.png]]
+
+## Proterozoic Ophiolites
+- rare ophiolites preserved in Proterozoic of:
+	- Russia
+	- China
+	- Findland
+- clear evidence for plate tectonics
+- ![[Pasted image 20230308100025.png]]
+
+## Early Supercontinents
+- may have existed at end of Archean
+- Proterozoic supercontinent **Rodinia**
+	- assembled 1.3 - 1.0 Gyr
+	- fragmented ~750 Myr
+- second supercontinent **Pannotia**
+	- assembled ~650 Myr
+	- fragmented ~550 Myr
+![[Pasted image 20230308100129.png|350]]
+
+## Proterozoic Glaciation
+- Continental scale glaciation not common in Earth history
+	- Pleistocene (1.6-0.01 Myr) best known
+	- also in Ordovician, Devonian, Pennsylvanian
+- 2 major episodes of Proterozoic glaciation
+- provide unique insight into ancient climates
+- glaciation identitifed by several lines of evidence
+	- diamictites (tillites) (poorly sorted)
+	- dropstones
+	- varves
+	- striations (pavements/striated stones)
+	- lack of weathering (e.g., fresh feldspar)
+	- geomorphology (glaciated terrane)
+
+>[!faq]- ![[Pasted image 20230308100722.png]]
+>tillite overlying striated bedrock - Veidnesbotn Fm (Norway), poorly sorted
+
+>[!faq]- ![[Pasted image 20230308100751.png]]
+>dropstone into varved sediemnts - Gowganda Fm (Ontario)
+
+## Early Proterozoic Glaciers
+- Early Proterozoic glacial rocks recognized in North America and in Scandinavia
+	- ~2.3 Gyr age
+	- suggests extensive ice sheet / ice sheets at this time but dating not precise enough to be sure
+	- Bruce Fm **not** 2.7 Gyr as stated in text but multiple glacial events recorded in Huronian sequence. Also **~2.3** Gyr age
+	- Contracting, expanding, and then gigantic expansion
+- ![[Pasted image 20230308101021.png|450]]
+
+### Late Proterozoic Glaciation
+* min extent of Late Proterozoic glaciation
+	* glaciations extend to equitorial latitudes
+	* most extensive glaciation in Earth history
+* glacial deposits of ~900 & 600 Myr age found on all continents except Anarctica
+* glaciations not occurring continuously over this time
+	* at least **4** episodes recognized
+	* many suggest global glaciation - **"Snowball Earth"** (entire Earth was completely or almost completely covered in glacial ice at some point)
+![[Pasted image 20230320093228.png]]
+
+## The Evolving Atmosphere
+* Archean atmosphere contained little or no free oxygen
+	* proccesses that produce oxygen:
+		* photochemical dissociation
+		* cyanobacteria (stromatolite) photosynthesis occurred during Archean but not common until ~2.3 Gyr
+	* @ beginning of Proterozoic <1% of present $O_2$ levels (i.e., <0.2% $0_2$ in atmosphere)
+	* unlikely if levels exceeded ~10% of present levels (i.e., ~2% $O_2$ in atmosphere) even by end of Proterozoic
+* $CO_2$ levels much higher in Archean & deceased in near present levels in Proterozoic
+	* $CO_2$ is a major greenhouse gas
+	* high Archean $CO_2$ suggested by little evidence for glaciation even though sun much less bright
+	* $CO_2$ likely sequestered into abundant shelf limestones and carbon-rich shales
+
+## Proterozoic Sediments & Atmospheric Evolution
+* evidence for changng $O_2$ content of atmospheric during Proterzoic:
+	* easily oxidized minerals (e.g., pyrite, uraninite) disappear as detrital minerals
+	* iron content greatly reduced in calcite (only reduced iron fits into calcite)
+	* development of Banded Iron Formations
+	* development of "red beds"
+	![[Pasted image 20230320094420.png|350]]
+* enough $O_2$ introduced into atmosphere to change character of sedimentary rocks by 2.3 Gyr - "**Great Oxidation Event**" (GOE)
+	![[Pasted image 20230320094542.png|350]]
+### Banded Iron Formations (BIF)
+* **BIFs** consist of alternating layers of iron-rich minerals (mostly hematite & magnetite) & chert ($SiO_2$) 
+	* some found in Archean
+	* ~90% of all BIFs formed during interval 2.5 to 2.0 Gyr
+	![[Pasted image 20230320095221.png|250]]
+	![[Pasted image 20230320095319.png|250]]
+	![[Pasted image 20230320095339.png|350]]
+
+### BIFs & Atmosphere Evolution
+- iron mainly in iron oxides
+	- hematite ($Fe_2O_3$) and magnetite ($Fe_3O_4$)
+- today iron combines w/ oxygen in oxidizing atmosphere to form insoluble oxide minerals
+	- not soluble in water
+- however, if oxygen absent
+	- iron more easiy dissolves (2+ is soluale, 3+ is not)
+	- large quantities accumulate in the world's oceans
+	- Archean oceans likely iron-rich & $O_2$-poor
+- as photosynthesis increased, $O_2$ released into system causing pprecipitation of iron oxides until dissolved iron depleted in oceans
+- silica also enriched in oceans because no silica-secreting organisms
+	- alternating silica deposition less well understood
+
+### Depositional Model for BIFs
+![[Pasted image 20230320100056.png]]
+
+## Continental Red Beds
+- during Archean & earliest Proterozoic, sediments mostly drab-colored (green, grey)
+- continental **"red beds"** include red shales & sandstones colored by hematite ($Fe_2O_3$)
+- first appear at ~2.3 Gyr (not 1.8)
+	- onset of red bed deposition coincided with introduction of oxygen into Proterozoic atmosphere (GOE)
+
+>Red mudrock in Glacier National Park
+![[Pasted image 20230320100456.png|350]]
+
+## Proterozoic Life History
+- Archean & early Proerozoic fossils uncommon (though life may have been more so)
+	- varieties are bacteria & cyanobacteria (blue-green algae)
+	- prokaryotes
+	![[Pasted image 20230320100614.png]] (photomicrograph of spherical & filamentous microfossils from Gunflint Chert, Ontario)
+- more complex cells evolved @ 2.1 Gyr
+	- eukaryotes
+	- requires some free oxygen
+
+## Prokaryotes & Eukaryotes
+![[Pasted image 20230320100803.png|350]]
+
+![[Pasted image 20230320100811.png|350]]
+
+## Origin of Eukaryotes
+* generally though eukaryotes evolved from prokaryotes living in symbiotic relationships
+	* **Endosymbiosis** is special case where one organism lives within another
+	* many internal organelles of eukaryotes (e.g., mitochondria) form from symbiotic prokaryotic organisms
+
+
+
+
+## Chapter 10/11
+### Sauk Sequence
+- Late Proterozoic-Early Ordovician - first major transgression onto N.American craton
+- craton above sea level
+	- influenced by weathering/erosion
+- deposition on passive shelf areas
+- transgression phase in middle Cambrian - epeiric sea encroaches over craton
+- ![[Pasted image 20230324091956.png]]
+
+### Transcontinental Arch
+- Sauk Sea covered most of N. America leaving portion of Canadian Shield & few large islands above sea-level
+	- the length of N. America straddled equator
+- trans-continental arch
+	- extended from New Mexico to Minnesota & L Superior area
+![[Pasted image 20230324092112.png]]
+(Pointing at Trans-continental Arch)
+
+### Cambrian Transgression
+- 3 Cambrian formations exposed in Grand Canyon
+	- time transgressive nature
+	- similar facies arrangements elsewhere on craton
+- carbonates dominate craton during transgression
+	- transcontinental Arch islands covered by Sauk Sea by early Ordovician
+	- by end of Sauk time, cratony covered by warm equitorial epeiric seas
+![[Pasted image 20230324092246.png]]
+
+### Cambrian Facies
+- craton interor to Applalachian mobile belt margin
+	- 3 similar time-transgression facies
+	- carbonates develop due to submergence of detrital sources
+![[Pasted image 20230324092325.png]]
+![[Pasted image 20230324092331.png]]
+
+### Regression and Unconformity
+- as Sauk Sea regressed during Early Ordovician, low relief landscape exposed
+- exposed rocks mainly limestones & dolostones
+	- experienced deep & extensive erosion since NA still in tropical environment
+- => craton-wide unconformity
+	- marks boundary btwn Sauk & Tippecanoe sequences
+![[Pasted image 20230324092444.png]]
+- transgression deposited Tippecanoe Sequence on most of craton during Middle Ordovician - Early Devonian
+- St. Peter Sandstone at base
+- well-sorted pure quartz sandstone
+- correlative rocks across mid-continent
+- results from reworking of earlier-formed sandstones
+![[Pasted image 20230324092701.png]]
+
+### Transgression of Tippecanoe Sea
+![[Pasted image 20230324092716.png]]
+
+### Ordovician Paleogeography 
+- change in position of equator
+- counter rotating counter-clockwise
+- following St. Peters, extensive carbonates
+	- result of organisms such as corals, brachipod, bryozoans, etc
+	- common dolomitization
+- in east, carbonates grade into shales
+	- ![[Pasted image 20230324092908.png]]
+
+### Silurian Paleogeography
+- reefs & evaporites develop in eastern part of craton
+- Michigan Basin
+	- surrounded by barrier reefs
+	- reefs restrict circulation and permit evaporite deposition
+- formation of domes, arches & basisn due to deformation related to orogeny to east
+	- structures eroded druring next transgression (Kaskasia)
+- ![[Pasted image 20230324093140.png]]
+
+![[Pasted image 20230324093623.png]]
+
+## Appalachian Mobile Belt
+- first Phanerozoic orogeny began during Middle Ordovician
+	- orogeny influenced:
+		- climate & sedimentary history of craton
+		- part of global tectonic regime that culminated w/ Pangea at end of Paleozoic
+- Appalachian Region a passive margin during Sauk time (**Late Proterozoic - Cambrian**)
+	- sedimentation balanced by subsidence
+		- shallow marine sands followed by extensive carbonates
+	- lapetus Ocean to east was widening due to divergence beginning in Late Proerozoic
+- Appalachian mobile belt began to develop w/ initiation of subduction of lapetus Ocean beneath Laurentia
+### Appalachian Mobile Belt
+![[Pasted image 20230324094251.png]]
+
+### The Taconic Orogeny
+- first of several orogenies to affect Appalachian region
+- Appalachian mobile belt divided into two depositional environments
+	- shallow carbonate platform that formed during Sauk transgression
+	- overlain by deep-water clastic sediments (including turbidites) and volcanics, marking onset of Taconic Orogeny
+- w/ subduction, volcanism, and downwarping of carbonate platform
+	- deep-water sediment derived from east
+	- erosion of Taconic Highlands
+- age of orogeny **~440 - 480 Myr**
+	- based on radiometric ages of volcanics/age of metamorphism
+
+### Queenston Delta Clastic Wedge
+- immediately following Taconic orogeny is development of large "clastic wedge"
+- extensive accumulation of detrital sediment depositied adjacent to uplifted area
+- become thinner/finer grained away from source
+- eventually grading into the caronate cratonic facies
+- clastic wedge resulting from erosion of Taconic Highlands => Queenston Delta
+
+### Caledonian/Aracdian Orogeny
+- transition to convergence => orogenic activity in NA/EU
+- ![[Pasted image 20230324095051.png]]
+### Late Paleozoic Paleogeography
+- Silurian Period
+	- Laurentia & Baltica => collide => Laurasia
+	- collision closed northern lapetus Ocean -> **Caledonian Orogeny**
+
+- Devonian Period
+	- southern paetus Ocean narrowed btwn Laurasia & Gondwana
+	- continued along eastern margin of Laurasia forming **Acadian Orogeny**
+	- erosion of highlands => extensive redbeds (Caledonian - **Old Red Sandstone**; Acadian - **Catskill Delta**)
+	- **Antler Orogeny** in Cordillera
+	- **Ellsemere Orogeny** on northern margin - collision w/ Sibera?
+
+![[Pasted image 20230324095458.png]]
+
+### Late Paleozoic Paleogeography
+- Carboniferous Period
+	- Gondwana moved over South Pole => continental glaciation
+	- sea level change influenced sedimentation on cratons
+	- coal basisn form in low latitudes
+	- Gondwana => move north => rotating clockwise => collided w/ Laurasia during Carboniferous into earliest Permian
+	- deformation progressed NE to SW, forming in order:
+		- Hercynian, Appalachian & Ouachita mobile belts
+- Pangaea begins tot ake shape
+	-  Sibera => collides w/ Kazkhstania and together collide w/ Laurasia (Baltica)
+	- NW China collides w/ SW margin of Siberia
+
+Early Carboniferous (~340 Myr)
+![[Pasted image 20230324100157.png]]
+
+Late Carboniferous (~310 Myr)
+![[Pasted image 20230324100212.png]]
+
+### Late Paleozoic Paleogeography
+- Permian Period
+	- assembly of Pangaea essentially completed during Permian
+	- better agreement on history of western half of Pangea
+	- history of eastern half more contentious
+	- Pangaea surrounded by subduction zones and moved north during Permian
+	- Panthalassa Ocean surrounded Pangaea
+- Pangaea climate
+	- extensive mountain ranges caused widespread arid to semiarid conditions
+	- extensive red beds & evaporites
+	- in northern temperate regions, coal deposits found
+	- ice sheets => formed in Carboniferous recede during Permian
+
+Late Permian (~260 Myr)
+![[Pasted image 20230324100405.png]]
+
+
+### Kaskaskia Sequence
+- Middle Devonian - Late Mississippean
+- **Kaskaskia Sea**
+	- transgressed over low relief craton, basal beds
+		- clean, well sorted quartz sandstone (e.g., Oriskany Sandstone)
+- elsewhere on craton carbonates difficult to distinguish from underlying Tippecanoe carbonates unless fossiliferous
+- majority of Kaskaskian rocks are carbonates, including reefs, and associated evaporites
+- widespread Upper Devonian - Lower Mississipian black shales
+**Kaskaskia Sequence:**
+![[Pasted image 20230324100700.png]]
+
+### Black Shales
+- end of Devonian, widespread occurrence of **black shales**
+- <10m thick
+- require high biological productivity and limited oxygen at base of water column 
+- limited water circulation in basins
+- important host of uranium deposits
+
+### Devonian - Mississippian Period
+![[Pasted image 20230324100915.png]]
